fix UI - Profile creation - not entirely visible text on button [BUG]

--- a/src/views/pages/profiles/create-profile/show-mnemonic/ShowMnemonic.less
+++ b/src/views/pages/profiles/create-profile/show-mnemonic/ShowMnemonic.less
@@ -34,6 +34,11 @@
                     width: 60px;
                     margin-bottom: 10px;
                 }
+                
+                .inverted-button {
+                    width: auto;
+                    margin-left: 0;
+                }
             }
 
             .button-container {
